alpm-srcinfo/tests/parse_errors/invalid_architecture.srcinfo
pkgbase = any-arch
	pkgver = 0.1.0
	pkgrel = 1
	arch = my_epic_arch_with_a <--space!

pkgname = any-arch
	arch = any
